[package]
name = "svc-authn"
version = "0.4.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authentication library."
readme = "README.md"
keywords = ["authentication", "authn", "middleware", "jwt", "bearer"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/netology-group/svc-authn-rs"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "netology-group/svc-authn-rs" }

[features]
default = []
bearer = ["http"]
jose = ["bearer", "chrono", "jsonwebtoken"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
jsonwebtoken = { version = "6.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
diesel = { version = "1.4", features = ["postgres"], optional = true }
tower-web = { version = "0.3", optional = true }
http = { version = "0.1", optional = true }
