[package]
name = "svc-authn"
version = "0.5.4"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authentication library."
readme = "README.md"
keywords = ["authentication", "authn", "middleware", "jwt", "bearer"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/netology-group/svc-authn-rs"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "netology-group/svc-authn-rs" }

[features]
default = []
bearer = ["http"]
jose = ["bearer", "chrono", "jsonwebtoken"]
cli = ["dirs", "jose", "structopt", "toml", "atty", "serde_json", "config"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
jsonwebtoken = { version = "6.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
diesel = { version = "1.4", features = ["postgres"], optional = true }
tower-web = { version = "0.3", optional = true }
http = { version = "0.1", optional = true }

dirs = {version = "2.0", optional = true }
structopt = { version = "0.3", optional = true }
toml = { version = "0.5.6", optional = true }
atty = {version = "0.2", optional = true}
serde_json = { version = "1.0", optional = true }
config = { version = "0.10.1", optional = true }

[[bin]]
name = "svc-authn-cli"
path = "src/bin/cli/main.rs"
required-features = [ "cli" ]
