[package]
name = "svc-authn"
version = "0.8.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authentication library."
readme = "README.md"
keywords = ["authentication", "authn", "middleware", "jwt", "bearer"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/foxford/svc-authn-rs"
license = "MIT"
edition = "2018"

[features]
default = ["bearer", "jose", "cli"]
bearer = ["http"]
jose = ["bearer", "chrono", "jsonwebtoken"]
cli = ["dirs", "jose", "structopt", "toml", "atty", "serde_json", "config"]

[dependencies]
atty = { version = "0.2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
config = { version = "0.13", optional = true }
diesel = { version = "1", features = ["postgres"], optional = true }
dirs = { version = "5", optional = true }
http = { version = "0.2", optional = true }
jsonwebtoken = { version = "7", optional = true }
serde = "1"
serde_derive = "1"
serde_json = { version = "1", optional = true }
sqlx = { version = "0.6", optional = true, features = [ "runtime-tokio-native-tls" ] }
structopt = { version = "0.3", optional = true }
toml = { version = "0.5", optional = true }

[[bin]]
name = "svc-authn-cli"
path = "src/bin/cli/main.rs"
required-features = ["cli"]
